
Lots of changes under the hood.

- Checks are now done in thread pools, which makes it easier to
  develop new checks, like Sophos blocker or SPF. 
- grossd can log aggregate statistics about query results. Check
  'stat_type' and 'stat_interval' configuration parameters.
- grossd can now serve different query protocols simultaneously.
  This is controlled by the 'protocol' config parameter.

Issues fixed:
#23: Customizable SMTP error messages
#26: connections could come from different IP addresses
#27: configurable greylisting time
#28: Bug in the mapping file example
#29: dnsbl tolerance counters not working on OS X
#31: Get rid of --with-worker configure option

Version 0.7.2

- Configurable log_level and syslog_method.
- Message queue enhancements under the hood
- Status counters for various events implemented
- You can now use host names in the configuration

Issues fixed:
#20: allow host names in configuration
#21: A dry run option for testing needed
#22: configurable logging

Version 0.7.1

A replacement of 0.7.0, there was a bug that prevented grossd
from compiling --with-worker=postfix.

Version 0.7.0

Implemented a thread pool feature. Worker threads are now 
reused, instead of firing up one on each connection. Numerous
bug fixes, most notably byte order related bugs in proto_sjsms.c.
Some configuration file changes: peerhost and synchost has been
replaced by sync_listen and sync_peer.

#Issues fixed:
#15: postfix protocol broken
#17: proto-sjsms breaks between hosts of different endianess

Version 0.6.3

Ported to OS X. Since sem_getvalue() is not implemented on 
OS X, skipping unresponsive dnsbls does not work, yet.

Issues fixed:
#14: processing delay should be included in the logs

Version 0.6.2

Issues fixed:
#1: -lpthread also on Solaris 9.
#2: Logging has been trimmed down.
#7: Libdir is now installed same as other directories.
#8: Removed relays.ordb.org from example config.
#9: SJSMS client library path corrected in INSTALL.