@@ -9,10 +9,10 @@
 
 
 # 'host' is the address the server should listen for queries
-# host = localhost
+# DEFAULT: host = localhost
 
 # 'port' is the port the server should listen for queries
-# port = 1111
+# DEFAULT: port = 1111
 
 # 'protocol' activates the server protocols grossd will support
 # Valid protocols are 'sjsms' and 'postfix'
@@ -27,29 +27,29 @@ protocol = postfix
 # status: basic statistics set
 # since_startup: basic set since the startup 
 # delay: processing delay statistics
-# stat_type = status
-# stat_type = delay
+# DEFAULT: stat_type = status
+# DEFAULT: stat_type = delay
 
 # 'stat_interval' is the number of seconds between status log entries
-# stat_interval = 3600
+# DEFAULT: stat_interval = 3600
 
 # 'filter_bits' is the size of the bloom filter. Size will be 2^filter_bits
-# filter_bits = 22
+# DEFAULT: filter_bits = 22
 
 # 'number_buffers' is the number of filters used in the ring queue
-# number_buffers = 8
+# DEFAULT: number_buffers = 8
 
 # 'rotate_interval' is the number of seconds between filter rotation.
 # Let N := 'number_buffers' and I := 'rotate_interval'. An entry will
 # stay in the servers' memory for (N - 0.5) * I seconds in average. 
-# rotate_interval = 3600
+# DEFAULT: rotate_interval = 3600
 
 # 'sync_peer' is the address of the peer used in clustered mode
 # sync_peer = 
 
 # 'sync_port' is the port number to listen to and connect to in 
 # communication with the peer. 
-# sync_port = 1112
+# DEFAULT: sync_port = 1112
 
 # 'statefile' is path of the file that the server will use to store the
 # state information. 
@@ -57,31 +57,32 @@ protocol = postfix
 
 # 'log_method' is used to list all the possible logging facilities.
 # currently only syslog is implemented
-# log_method = syslog
+# DEFAULT: log_method = syslog
 
 # 'log_level' Possible log levels are 'debug', 'info', 'notice'
 # 'warning' and 'error'.
-# log_level = info
+# DEFAULT: log_level = info
 
 # 'syslog_facility' is the facility syslog sends log messages with.
-# syslog_facility = mail
+# DEFAULT: syslog_facility = mail
 
 # 'update' is the way server updates the database. Valid options are
 # 'grey' and 'always'. If 'update = grey' grossd will update the database
 # only if response is STATUS_GREY 
-# update = grey
+# DEFAULT: update = grey
 
 # 'grey_mask' is the mask for grossd to use when matching client_ip
 # against the database. You may set it to 24 to treat  addresses
 # like a.b.c.d as a.b.c.0.
-# grey_mask = 0
+# DEFAULT: grey_mask = 0
 
 # 'grey_delay' is the time in seconds new triplets are kept on the greylist.
-# grey_delay = 10
+# DEFAULT: grey_delay = 10
 
 # 'check' lists all the checks grossd will do to judge if client_ip is
-# suspicious or not. 'dnsbl' is the only implemented check.
-# check = dnsbl
+# suspicious or not. 'dnsbl' is the only check tested in production. 
+# You may configure 'blocker' for querying Sophos blocker service.
+# DEFAULT: check = dnsbl
 
 # 'dnsbl' is a dns domain name of the dnsbl that 'dnsbl' check will query
 # There are no defaults, but below is a list of dnsbls you could be using
@@ -90,3 +91,9 @@ dnsbl = sbl.spamhaus.org
 dnsbl = dnsbl.njabl.org
 dnsbl = cbl.abuseat.org
 dnsbl = xbl.smaphaus.org
+
+# 'blocker_host' is the host name of the Sophos blocker server.
+# blocker_host =
+
+# 'blocker_port' is the tcp port of the Sophos blocker service.
+# DEFAULT: blocker_port = 4466
